# GrantBot

./: .env.default  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  babel.cfg  pyproject.toml  requirements.txt  run.py
locales/kk/LC_MESSAGES/: messages.po
src/: settings.py
src/api/: exceptions.py  requester.py
src/bot/: __init__.py  callback.py  messages.py  middlewares.py  states.py  text.py
src/bot/handlers/: __init__.py  common_handlers.py  handlers.py  info_handlers.py  main_handlers.py  settings_handlers.py  welcome_handlers.py
src/bot/handlers/grant/: __init__.py  create.py  list.py  management.py
src/bot/keyboards/: default.py  info.py  language.py  settings.py
src/db/: dals.py  engine.py  models.py  session.py
src/db/dao/: GrantDAO.py  UserDAO.py
src/db/models/: Base.py  Grant.py  User.py  __init__.py
src/injector/: injector.py
src/miscs/: validators.py
