[tool.poetry]
name = "grantbot"
version = "1.0.0"
description = ""
authors = ["Ruletk <damir.timergazin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
aiogram = "3.0.0b9"
sqlalchemy = "2.0.19"
asyncpg = "0.28.0"
aiohttp = "3.8.6"
redis = "^5.0.1"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "3.3.3"
babel = "2.9.1"
alembic = "1.11.1"

[tool.poetry.scripts]
run-app = "run:start_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
